# RyuPrototypeSFML

./: CMakeLists.txt  README.md  todo
assets/spritesheets/configs/: ichi_l1.json
include/Ryu/Character/: CharacterBase.h  CharacterIchi.h  ICharacter.h
include/Ryu/Control/: CharacterEnums.h  PlayerController.h
include/Ryu/Core/: EventManager.h  Game.h  World.h
include/Ryu/Debug/: imGuiDebug.h
include/Ryu/Physics/: Physics.h  RaycastComponent.h
include/Ryu/Scene/: Box.h  EntityStatic.h  LevelManager.h  SceneEnums.h  SceneNode.h
src/: CMakeLists.txt  Main.cpp
src/Animation/: CMakeLists.txt  SpritesheetAnimation.cpp
src/Character/: CMakeLists.txt  CharacterBase.cpp  CharacterIchi.cpp
src/Control/: CMakeLists.txt  PlayerController.cpp
src/Core/: CMakeLists.txt  EventManager.cpp  Game.cpp  World.cpp
src/Debug/: CMakeLists.txt  b2DrawSFML.cpp  imGuiDebug.cpp
src/Events/: CMakeLists.txt
src/Physics/: CMakeLists.txt  Physics.cpp  RaycastComponent.cpp
src/RyuSuite/: CMakeLists.txt  RAnimator.cpp
src/Scene/: Box.cpp  CMakeLists.txt  Crate.cpp  EntityStatic.cpp  SceneNode.cpp
src/Statemachine/: CMakeLists.txt  CharacterStateDuckEnter.cpp  CharacterStateFalling.cpp  CharacterStateIdle.cpp  CharacterStateJumpUp.cpp
src/Tests/: CMakeLists.txt
src/Tests/Animation/: CMakeLists.txt
